=== 2.2.3 / 2011-04-03

* Prevent zero-length trackers (trackers having no position information) from being accumulated during import.
	This had adverse effects on export modules that could not export trackers containing no information. As a sidenote we
	will write down in the doco that an export module should not expect empty trackers with no keyframes to be sent

=== 2.2.2 / 2011-04-03

* The last change to PFMatchit exporter had adverse effects on pftrack files, now fixed.
* Pipeline now has it's own exceptions, all inheriting from RuntimeError

=== 2.2.1 / 2011-04-01

* April fool!
* PFMAtchit requires LF in it's files instead of CRLF, but our FPTrack exporter used CRLF. Now fixed.
* Changed PFMatchit exporter to export .txt files instead of .2dt

=== 2.2.0 / 2011-03-01

* Improve documentation substantially
* Changed the Import::Base interface yo use enumeration instead of @receiver.
  Upside: This allows us to convert importers to an array of trackers and other niceties.
  Downside: stream_parse will be deprecated. It is however still available for backwards compatibility
  
=== 2.1.1 / 2011-02-14

* Fix handling of Shake scripts containing stabilizer nodes with no animation
* Remove underscores from tracker names exported to Syntheyes to prevent spaces from being generated

=== 2.1.0 / 2011-02-08
* Adds PFMatchit import support. Also all PFTrack imported cameras will have a camera name injected into the tracker
* Adds a PFMatchit exporter (PFMatchit only wants cameras with numbers in the name)

=== 2.0.2 / 2011-02-02
* Compatible with Ruby 1.9.2
* Scaler middleware now supports negative scaling factors

=== 2.0.0 / 2011-01-27
* Bugfix for PFTrack exports to contain cross-platform linebreaks (rn instead of n)

=== 1.9.9 / 2010-08-11

* Buffer the parsed trackers on disk or in a stream (all backwards-compatible). Substantially reduces conversion times and memory
  usage on huge files.

=== 1.9.8 / 2010-08-11

* Very minor changes and improvements